--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,3 +7,10 @@ GEMINI_API_KEY=your_gemini_api_key_here
 
 # Flask configuration
 SECRET_KEY=your_secret_key_here
+
+# Translation Middleware Configuration
+# Set to 'false' to disable automatic translation
+TRANSLATION_ENABLED=true
+
+# Translation model (optional, defaults to gemini-2.5-flash)
+TRANSLATION_MODEL=gemini-2.5-flash
